# ling-api

./: .gitignore  Dockerfile  config.py  main.py  pyproject.toml
api/endpoints/: user.py  wordlists.py
db/: db.py  models.py
db/repos/: repo.py  sqlalchemy_repo.py  user_repo.py  userword_repo.py  userwordlist_repo.py  word_repo.py  wordlist_repo.py
dependencies/: user_service.py  userword_service.py  userwordlist_service.py  word_service.py  wordlist_service.py
schemas/: result.py  results.py  user_word.py  word.py  word_list.py
services/: service.py  user_service.py  userword_service.py  userwordlist_service.py  word_service.py  wordlist_service.py
